apps/haenu/inpyeongo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inpyeongo
  namespace: haenu
  labels:
    app: inpyeongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inpyeongo
  template:
    metadata:
      labels:
        app: inpyeongo
    spec:
      containers:
      - name: inpyeongo
        image: hyeonwoo5342/inpyeongo:1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
