apps/haenu/inpyeongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inpyeongo-ingress
  namespace: haenu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: inpyeongo.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: inpyeongo
            port:
              number: 3000
